# cats

./: .gitignore  .gitkeep  AUTHORS.txt  LICENSE  Makefile  README.md  articles.md  car_demo.ipynb  catlog.md  cats_demo.ipynb  cats_demo.py  commit-history.txt  fake_node.py  multi-agent-collaboration.ipynb  process.py  pyproject.toml  requirements-mac.txt  requirements.txt
cats/: __init__.py  fake_node.py  node.py
cats/executor/: __init__.py
cats/executor/function/: __init__.py
cats/executor/structure/: __init__.py
cats/factory/: __init__.py
cats/io/input/: __init__.py  function.py  structure.py
cats/network/: __init__.py  aws.py  cod.py  ipfs_client.py  ipfs_docker.py
cats/network/clients/: __init__.py
cats/service/: __init__.py  utils.py
cats/service/k8s/: __init__.py
cats/utils/: __init__.py  cod.py
data/: process.py
data/deprecated/: buffer_size_ubuntu.txt  data_transfer.py  data_transfer.sh  new_main.tf.txt  old_process.py  process0.py  process1.py
data/input/: main.tf  process.py
data/input/function/: infrafunction.py  process.py
data/input/plant/: main.tf
data/input/structure/: .terraform.lock.hcl  ipfs_connect_peers.sh  ipfs_transport_compose.yaml  main.tf  outputs.tf
data/input/structure/modules/infrastructure/: main.tf  minio_compose.yaml  outputs.tf
data/input/structure/modules/plant/: main.tf  outputs.tf  variables.tf
data/input/structure/outputs/data_1727327106/: 3_000006_000000.csv
data/input/structure/outputs/data_1727334372/: 3_000011_000000.csv
data/input/structure/outputs/data_1727335304/: 3_000008_000000.csv
data/input/structure/outputs/data_1727335722/: 1_000011_000000.csv
data/input/structure/outputs/data_1727335903/: 3_000019_000000.csv
data/input/structure/outputs/data_1727371397/: 1_000016_000000.csv
data/input/structure/outputs/data_1727372522/: 3_000009_000000.csv
depricated/: car_demo.ipynb
docs/: BOM.md  COMPONENTS.md  CONTRIBUTING.md  DASHBOARDS.md  DEMO.md  DEPS.md  DESIGN.md  ENV.md  EXAMPLES.md  IPFS.md  LineageOfProvenance.md  MAC.md  NodeProductFlow.md  PLANTs.md  TEST.md
docs/depricated/: specification.md
experiments/: EXP.md
experiments/mac/: MAC.md  car_demo.py  requirements-mac.txt
scripts/: clean-test-data.sh
tests/: conftest.py  verification_test.py
tests/depricated/: old_verification_test.py
(+53 files in other folders)
