[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cats/"]
include = ["cats"]

[project]
name = "cats"
version = "0.0.0"
authors = [
  { name="Joshua E. Jodesty", email="joshua@dynamicalsystemsgroup.com"},
]
maintainers = [
  { name="Joshua E. Jodesty", email="joshua@dynamicalsystemsgroup.com"},
]
description = "CATs"
readme = "README.md"
requires-python = ">=3.10.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ipfshttpclient>=0.4.13,<0.5",
    "flask>=3.0.0",
    "boto3>=1.34.21",
    "kubernetes>=30.1.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
ops = [
    "ray[default,data]>=2.45.0",
    "pandas>=2.2.3",
    "marimo>=0.23.0",
    "tqdm>=4.66.5",
    "pyarrow>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/DynamicalSystemsGroup/cats"
Issues = "https://github.com/DynamicalSystemsGroup/cats/issues"
